# tasmania

./: .README.md.swp  ._constants.py.swp  ._namelist.py.swn  ._namelist.py.swo  ._namelist.py.swp  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .main.py.swn  .main.py.swo  .main.py.swp  .makefile.swp  .model.py.swn  .model.py.swo  .model.py.swp  .pre-commit-config.yaml  .utils.py.swo  .utils.py.swp  .utils_meteo.py.swp  CONTRIBUTORS.md  HISTORY.md  LICENSE_HEADER.cpp  LICENSE_HEADER.makefile  LICENSE_HEADER.sh  MANIFEST.in  README.md  _namelist.py  add_license_header.py  bootstrap.sh  bootstrap_venv.sh  dockerfile  factory.py  install_venv.sh  main.py  makefile  model.py  namelist.py  prepare.sh  (+12 more)
.ipynb_checkpoints/: dry_isentropic_model-checkpoint.ipynb
.licensing/: LICENSE_HEADER.cpp  LICENSE_HEADER.makefile  LICENSE_HEADER.sh  add_license_header.py  remove_license_header.py
_licensing/: LICENSE_HEADER.makefile  LICENSE_HEADER.sh  remove_license_header.py
buffer/: burgers_egu_1.eps  burgers_egu_2.eps  burgers_egu_2_bis.eps  burgers_egu_minimal_1.eps  burgers_egu_minimal_1_bis.eps  burgers_egu_minimal_2.eps  burgers_error_egu.eps  burgers_error_exp.eps  burgers_error_lazy.eps  burgers_error_normal.eps  burgers_error_poster.eps  burgers_error_time.eps  burgers_error_time_1.eps  burgers_error_time_2.eps  burgers_time.eps  burgers_time_exp.eps  burgers_time_lazy.eps  burgers_time_normal.eps  domain_precipitation.eps  isentropic_dry_nx161_u.eps  isentropic_dry_nx161_u_sus.eps  isentropic_dry_nx41_rmsd.eps  isentropic_dry_nx41_u.eps  isentropic_dry_nx81_rmsd.eps  isentropic_dry_nx81_u.eps  isentropic_moist_accprec.eps  prec_160.eps  prec_44.eps  prec_44_1.eps  qr_160.eps  qr_44.eps  u0_error.eps  u0_horizontal_velocity_cc.eps  u0_horizontal_velocity_cc_lenovo.eps  u0_horizontal_velocity_ssus.eps  u0_horizontal_velocity_sus.eps  u0_horizontal_velocity_t1.eps  u0_wf0_error.eps  u0_wf1_error.eps  u0_wf1_error_notitle.eps  (+12 more)
data/: .~lock.metadata.ods#  burgers.ods  isentropic_convergence_maccormack_u10_lx400_nz300_ray05_8km_relaxed.pickle  isentropic_convergence_maccormack_u10_lx400_nz300_ray05_diff_8km_relaxed.pickle  isentropic_convergence_upwind_u10_lx400_nz300_4km.pickle  isentropic_convergence_upwind_u10_lx400_nz300_4km_relaxed.pickle  isentropic_convergence_upwind_u10_lx400_nz300_8km.pickle  isentropic_convergence_upwind_u10_lx400_nz300_8km_relaxed.pickle  isentropic_convergence_upwind_u10_lx400_nz300_ray005_4km.pickle  isentropic_convergence_upwind_u10_lx400_nz300_ray005_8km.pickle  isentropic_convergence_upwind_u10_lx400_nz300_ray05_8km_relaxed.pickle  isentropic_convergence_upwind_u10_lx400_nz300_ray0_8km.pickle  isentropic_convergence_upwind_u20_lx400_nz300_4km.pickle  isentropic_convergence_upwind_u20_lx400_nz300_8km.pickle  isentropic_convergence_upwind_u20_lx400_nz300_8km_long.pickle  isentropic_convergence_upwind_u20_lx400_nz300_ray0005_8km.pickle  metadata.ods  nmwc_model_check.npz  nmwc_model_check_leapfrog.pickle  nmwc_model_check_leapfrog_nonconservative.pickle  nmwc_model_check_maccormack.pickle  nmwc_model_check_upwind.pickle  smolarkiewicz_rk3cosmo_fifth_order_upwind_third_order_upwind_nx51_ny51_nz50_dt20_nt4320_flat_terrain_L25000_u0_wf4_f_cc_bis.nc  smolarkiewicz_rk3cosmo_fifth_order_upwind_third_order_upwind_nx51_ny51_nz50_dt20_nt4320_flat_terrain_L25000_u0_wf4_f_ssus_bis.nc  smolarkiewicz_rk3cosmo_fifth_order_upwind_third_order_upwind_nx51_ny51_nz50_dt20_nt4320_flat_terrain_L25000_u0_wf4_f_sus_bis.nc  utils.py  verification_2_leapfrog.pickle  verification_2_leapfrog_ter.pickle  verification_2_maccormack.pickle  verification_2_upwind.pickle  verification_kessler_wrf_leapfrog.pickle  verification_kessler_wrf_maccormack.pickle  verification_kessler_wrf_upwind.pickle  verification_moist_advection.pickle  verification_moist_advection_leapfrog.pickle  verification_moist_advection_leapfrog_ter.pickle  verification_moist_advection_maccormack.pickle  verification_moist_advection_upwind.pickle  verification_moist_advection_upwind_newinterface.pickle  verification_moist_euler_centered.pickle  (+4 more)
doc/: Makefile  warnings.txt
docker/: .bootstrap.sh.swp  .dockerfile.swp  .requirements.txt.swp  bashrc  bootstrap.sh  build.sh  build_base.sh  build_cpu.sh  build_gpu.sh  build_tasmania.sh  dockerfile  requirements.txt  run.sh  run.sh.mac  run.sh.volume  run_cpu.sh  run_cpu_mac.sh  run_gpu.sh  run_gpu_mac.sh  run_mac.sh  vimrc
docs/: Makefile  make.bat  warnings.txt
drivers/: README.md  driver_isentropic_dry.py  driver_isentropic_dry_cc.py  driver_isentropic_dry_ssus.py  driver_isentropic_dry_sus.py  driver_isentropic_moist.py  driver_isentropic_moist_cc.py  driver_namelist_isentropic_dry_ssus.py  driver_namelist_isentropic_dry_sus.py  driver_namelist_isentropic_moist.py  driver_namelist_isentropic_moist_cc.py  driver_namelist_isentropic_verification_dry_cc.py  makefile  run.sh  (+19 more)
(+32401 files in other folders)
