[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ['py34', 'py35', 'py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.coverage.run]
omit = [
    "tasmania/python/domain/grids/*",
    "tasmania/python/domain/topographies/user_defined.py",
    "tasmania/python/framework/offline_diagnostics.py",
    "tasmania/python/framework/tendency_steppers/rk3.py"
]
