build-backend = 'setuptools.build_meta'
requires = ['setuptools>=65.5.0', 'wheel']

[project]
authors = [
	{name = 'Stefano Ubbiali', email = 'subbiali@phys.ethz.ch'},
]
classifiers = [
	'Development Status :: 3 - Alpha',
	'Intended Audience :: Science/Research',
	'Operating System :: POSIX',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Topic :: Scientific/Engineering :: Atmospheric Science',
]
dependencies = [
	'click>=8.0',
	# note(stubbiali): specify commit hash until #1462 is available in a public release
	'gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@2cd0c91',
	'matplotlib>=2.0',
	'netcdf4>=1.3',
	'numpy>=1.22',
	'pandas',
	'pydantic<2.0',
	'sympl @ git+https://github.com/stubbiali/sympl.git@oop',
]
description = 'Tasmania: Prototype framework for composable weather and climate models in Python.'
keywords = [
	'numerical modeling',
	'numerical weather prediction',
	'physics-dynamics coupling'
]
license = {file = 'LICENSE.md', content-type = 'text/markdown'}
name = 'tasmania'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = '>=3.9'
version = '0.1.0'

[project.optional-dependencies]
dev = ['black==24.4.0', 'flake8', 'ipdb', 'ipython<8.23.0', 'mypy', 'pre-commit']
gpu = ['cupy']
gpu-cuda11x = ['cupy-cuda11x']
gpu-cuda12x = ['cupy-cuda12x']
gpu-rocm = ['cython<3.0', 'cupy<13.0']

[project.urls]
Source = 'https://github.com/stubbiali/gt4py-dwarf-p-cloudsc2-tl-ad.git'

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.gt_cache
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.mypy]
check_untyped_defs = true
# set to `true` once cupy and sympl support typing
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = []
implicit_optional = false
install_types = true
plugins = 'numpy.typing.mypy_plugin'
show_column_numbers = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.setuptools]
platforms = ['Linux', 'Mac']

[tool.setuptools.package-data]
'tasmania' = ['py.typed']
