[metadata]
name = tasmania
description = Ease the construction of Earth System Models in Python
author = ETH Zurich
author_email = subbiali@phys.ethz.ch
license = GPLv3
license_file = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/eth-cscs/tasmania
platforms = Linux, Mac
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience:: Science / Research
    License :: OSI Approved:: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
    cython>=0.27.3
    matplotlib>=2.0.0
    netCDF4>=1.3.1
	numba
    numpy>=1.9.0
    pandas>=0.24.2
    pyqt5>=5.14.0
    scipy>=1.0.0
    gt4py @ git+https://github.com/gridtools/gt4py.git#egg=gt4py
    sympl @ git+https://github.com/stubbiali/sympl.git@ubbiali#egg=sympl
    xarray @ git+https://github.com/pydata/xarray.git#egg=xarray

[options.extras_require]
cuda =
    cupy

[tool:pytest]
testpaths = tests

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
builder = html latexpdf

[flake8]
exclude =
    .eggs
    .git
    .licensing
    build
    dist
    docs/source/conf.py
max-line-length = 90
